[gd_scene load_steps=7 format=3 uid="uid://becqarfygeerl"]

[ext_resource type="Script" path="res://game/scripts/gameplay/subScenes/PauseScreen.gd" id="1_1v0eh"]
[ext_resource type="Script" path="res://game/scripts/menus/data/Alphabet.gd" id="2_wlf7l"]
[ext_resource type="FontFile" uid="uid://bo3t3laebx8h8" path="res://assets/fonts/vcr.ttf" id="3_fpfug"]

[sub_resource type="LabelSettings" id="LabelSettings_dvghw"]
font = ExtResource("3_fpfug")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_8t3jx"]
font = ExtResource("3_fpfug")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_s1ojo"]
font = ExtResource("3_fpfug")
font_size = 32

[node name="PauseScreen" type="Node2D"]
process_mode = 2
z_index = 1
script = ExtResource("1_1v0eh")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0)

[node name="Alphabet_Template" type="ReferenceRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_wlf7l")
bold = true

[node name="Pause_Items" type="Node2D" parent="."]

[node name="Song_Text" type="Label" parent="."]
offset_left = 784.0
offset_top = 8.0
offset_right = 1259.0
offset_bottom = 40.0
text = "woah super mario the song"
label_settings = SubResource("LabelSettings_dvghw")
horizontal_alignment = 2

[node name="Diff_Text" type="Label" parent="."]
offset_left = 496.0
offset_top = 72.0
offset_right = 1256.0
offset_bottom = 104.0
text = "and this is difficulty of song (awesome)"
label_settings = SubResource("LabelSettings_8t3jx")
horizontal_alignment = 2

[node name="Time_Text" type="Label" parent="."]
offset_left = 384.0
offset_top = 40.0
offset_right = 1258.0
offset_bottom = 72.0
text = "dis is a timer / too lazy to put death counter"
label_settings = SubResource("LabelSettings_s1ojo")
horizontal_alignment = 2
